--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ paginate: 10
 #
 
 markdown: redcarpet
-highlighter: pygments
+highlighter: rouge
 permalink: /:categories/:year/:month/:day/:title
 
 # The release of Jekyll Now that you're using
