--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,6 @@ paginate: 10
 # !! You don't need to change any of the configuration flags below !!
 #
 
-markdown: redcarpet
 highlighter: rouge
 permalink: /:categories/:year/:month/:day/:title
 
@@ -41,7 +40,8 @@ sass:
 
 # Use the following plug-ins
 gems:
-  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
+  - jekyll-sitemap
+  - jekyll-paginate
 
 # Exclude these files from your production _site
 exclude:
